--- a/style.css
+++ b/style.css
@@ -157,6 +157,21 @@ section p {
     from { opacity: 0; transform: translateY(-10px); }
     to   { opacity: 1; transform: translateY(0); }
 }
+/*Frase*/
+.quote.fancy {
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 1.2rem;
+  color: #6b6b6b;
+  text-align: center;
+  margin-top: 1.5rem;
+  letter-spacing: 0.4px;
+  transition: opacity 0.3s ease;
+}
+.quote.fancy:hover {
+  opacity: 0.7;
+}
+
 
 /* --- SOBRE MÍ --- */
 #sobre-mi p {
